# hpdex

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TESTING.md  bar.cpp  bench_mwu.py  benchmark.py  compile_commands.json  debug_progress.py  mannwhitneyu.cpp  minimal_test.cpp  pyproject.toml  pytest.ini  run_tests.py  setup_lib.sh  simple_module.cpp  simple_test.py  test.py  test_progress_only.cpp  test_verification
.github/workflows/: build.yml  release.yml
build_test_cpp/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build_test_cpp/highway_build/: CTestTestfile.cmake  DartConfiguration.tcl  abort_test[1]_include.cmake  aligned_allocator_test[1]_include.cmake  arithmetic_test[1]_include.cmake  auto_tune_test[1]_include.cmake  base_test[1]_include.cmake  bench_sort[1]_include.cmake  bit_pack_test[1]_include.cmake  bit_permute_test[1]_include.cmake  bit_set_test[1]_include.cmake  blockwise_combine_test[1]_include.cmake  blockwise_shift_test[1]_include.cmake  blockwise_test[1]_include.cmake  cast_test[1]_include.cmake  cmake_install.cmake  combine_test[1]_include.cmake  compare_test[1]_include.cmake  complex_arithmetic_test[1]_include.cmake  compress_test[1]_include.cmake  concat_test[1]_include.cmake  convert_test[1]_include.cmake  copy_test[1]_include.cmake  count_test[1]_include.cmake  crypto_test[1]_include.cmake  demote_test[1]_include.cmake  div_test[1]_include.cmake  dot_test[1]_include.cmake  dup128_vec_test[1]_include.cmake  expand_test[1]_include.cmake  find_test[1]_include.cmake  float_test[1]_include.cmake  fma_test[1]_include.cmake  foreach_vec_test[1]_include.cmake  highway_test[1]_include.cmake  if_test[1]_include.cmake  image_test[1]_include.cmake  in_range_float_to_int_conv_test[1]_include.cmake  interleaved_test[1]_include.cmake  logical_test[1]_include.cmake  (+47 more)
build_test_cpp/highway_build/googletest-build/: CTestTestfile.cmake  cmake_install.cmake
build_test_cpp/highway_build/googletest-build/googlemock/: CTestTestfile.cmake  cmake_install.cmake
build_test_cpp/highway_build/googletest-build/googletest/: CTestTestfile.cmake  cmake_install.cmake
build_test_cpp/highway_build/googletest-download/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
build_test_cpp/highway_build/googletest-download/googletest-prefix/src/googletest-stamp/: googletest-gitinfo.txt  googletest-update-info.txt
build_test_cpp/highway_build/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake  googletest-mkdirs.cmake
cpp_test/: CMakeLists.txt
src/cpp/: mannwhitneyu.cpp  mannwhitneyu_with_cuda.cpp  module.cpp  test.cpp
src/cpp/include/: common.hpp  config.hpp  cuda_tools.hpp  macro.hpp  mannwhitneyu.hpp  progress.hpp  simd.hpp  sparse.hpp
src/hpdex/: __init__.py  backen.py  de.py  kernel.py  operator.py  stream.py
src/hpdex/backend/: __init__.py  de.py  de_.py  kernel.pyi  mannwhitneyu_.py
test/: README.md  README_TESTING.md  bench_mwu.py  bench_mwu.txt  benchmarks.py  conftest.py  pytest.ini  quick_test.py  run_tests.py  test.py  test_hpdex_comprehensive.py  test_runner.py
test/configs/: config.yml  config_quick.yml  config_real.yml
test/src/: data_generators.py  edge_case_tests.py  kernel_tests.py  performance_tests.py  pipeline_tests.py  real_data_tests.py  test_runner.py  test_utils.py
