[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.10",
  "cmake>=3.24",
  "ninja; platform_system != 'Windows'"
]
build-backend = "scikit_build_core.build"

[project]
name = "hpdex"
version = "1.0.0"
description = "High-Performance Parallel Differential Expression Analysis for Single-Cell Data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
keywords = ["single-cell", "differential expression", "pybind11", "parallel", "C++"]

# 运行时依赖（按你之前的）
dependencies = [
  "numpy",
  "scipy",
  "numba",
  "pandas",
  "anndata",
  "tqdm",
  "pybind11>=3.0.1",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "scanpy",
  "psutil",
  "pdex"
]

[tool.scikit-build]
# 可选：显示声明最低版本（非必须）
minimum-version = "0.9"

[tool.scikit-build.wheel]
# 把 src/hpdex 复制进 wheel（纯 Python 文件、.pyi、__init__.py 等）
packages = ["src/hpdex"]

