[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.10",
  "cmake>=3.24",
  "ninja; platform_system != 'Windows'"
]
build-backend = "scikit_build_core.build"

[project]
name = "hpdex"
version = "1.0.0"
description = "High-Performance Parallel Differential Expression Analysis for Single-Cell Data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wang Zhongqi", email = "2868116803@qq.com" }]
keywords = ["single-cell", "differential expression", "pybind11", "parallel", "C++"]

dependencies = [
  "numpy",
  "scipy",
  "numba",
  "pandas",
  "anndata",
  "tqdm"
]

[project.optional-dependencies]
test = [
  "scanpy",
  "pdex"
]

[tool.scikit-build]
minimum-version = "0.9"

[tool.scikit-build.wheel]
packages = ["src/hpdex"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = ["pp*", "*-musllinux*"]
test-requires = ["numpy", "scipy"]
test-command = "python {project}/test/quick_test.py"
